# synapse

./: Cargo.toml  README.md
examples/: composite_waves_ltc_v1.rs  composite_waves_ltc_v2.rs
src/: lib.rs
src/cells/v1/: lstm.rs  mod.rs  s4d.rs
src/cells/v1/cfc/: cfc_cell.rs  mod.rs
src/cells/v1/ltc/: ltc_cell.rs  mod.rs
src/cells/v2/: mod.rs
src/cells/v2/ltc/: ltc_cell.rs  mod.rs
src/fft/: mod.rs
src/flow_matching/: mod.rs  readme.md  utils.rs
src/flow_matching/path/: affine.rs  mixture.rs  mod.rs  path.rs  path_sample.rs
src/flow_matching/scheduler/: scheduler.rs
src/flow_matching/solver/: discrete_solver.rs  mod.rs  ode_solver.rs  utils.rs
src/inr/: pae.rs  wire.rs
src/wiring/: mod.rs
src/wiring/v1/: auto_ncp.rs  base.rs  fully_connected.rs  mod.rs  ncp.rs  random.rs
src/wiring/v2/: mod.rs
src/wiring/v4/: mod.rs
